# libiconv-win-build

./: CMakeLists.txt
include/: iconv.h
lib/: config.h
src/: config.h
